Changelog
=========

1.0a5 - 2009-08-02
------------------

* Don't filter children of non-queriable parent types (e.g. Large Plone
  Folders).
  [optilude]

1.0a3 - 2009-07-12
------------------

* Apply patch from Gerhard Weis to make the lightbox play nicer with CSS
  z-indexes.
  [optilude]

1.0a3 - 2009-06-29
------------------

* Fix security validator to work properly on add views and other views using
  namespace traversal (++add++...)
  [optilude]

1.0a2 - 2009-06-28
------------------

* Fix display widgets.
  [optilude]

* Import SitemapNavtreeStrategy conditionally so it doesn't break on Plone
  trunk. [davisagli]

1.0a1 - 2009-04-17
------------------

* Initial release