@@ -1,11 +1,14 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:gs="http://namespaces.zope.org/genericsetup"
     i18n_domain="plone.formwidget.contenttree">
     
     <include package="plone.z3cform" />
     
+    <i18n:registerTranslations directory="locales" />
+
     <adapter factory=".navtree.QueryBuilder" />
     <adapter factory=".navtree.NavtreeStrategy" />
     
