@@ -4,6 +4,10 @@ Changelog
 1.0a5 - 2009-08-02
 ------------------
 
+* Added message IDs for translations and added locales directory with
+  german translations.
+  [jbaumann]
+
 * Don't filter children of non-queriable parent types (e.g. Large Plone
   Folders).
   [optilude]
